Modify image posistion

--- a/Todo
+++ b/Todo
@@ -1,5 +1,5 @@
 - Ýta á mynd
     - fleiri upplysingar á hover með click
-- Raða myndir betur
-    - losna við hvíta shittið
--velja tímabil
+- Breyta font
+- Gera titil (íslenzkir tónleikar)
+- Date picker (frá og til)
